--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,26 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.py",
+      "src": "vercel_app.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "static/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "app.py"
+      "dest": "vercel_app.py"
     }
-  ]
+  ],
+  "env": {
+    "FLASK_APP": "vercel_app.py",
+    "PYTHONUNBUFFERED": "1"
+  }
 }
