--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,10 @@
   "builds": [
     {
       "src": "vercel_app.py",
-      "use": "@vercel/python"
-    },
-    {
-      "src": "static/**",
-      "use": "@vercel/static"
+      "use": "@vercel/python",
+      "config": {
+        "includeFiles": ["templates/**", "static/**"]
+      }
     }
   ],
   "routes": [
@@ -19,9 +18,5 @@
       "src": "/(.*)",
       "dest": "vercel_app.py"
     }
-  ],
-  "env": {
-    "FLASK_APP": "vercel_app.py",
-    "PYTHONUNBUFFERED": "1"
-  }
+  ]
 }
