--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,14 @@
   "builds": [
     {
       "src": "vercel_app.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "includeFiles": [
+          "templates/**",
+          "static/**"
+        ]
+      }
     }
   ],
   "routes": [
